patches from Walter Campbell
1.  Added myself to the credits
2.  Put MAX_BUFFER under __CYGWIN__ control, and upped the values to a
    reasonable number
3.  Set INIT_MAXCLIENTS to 180, as HARD_FDLIMIT_(256) - 10 - MAX_BUFFER(60)
    is less than the original INIT_MAXCLIENTS(200).  180 is a better value
    With the default values, the true max connections can be 186 (44 on
    Cygwin).
4.  Fixed the path on FNAME_*LOG, someone committed a config.h with an
    inconsistant path
5.  Cleaned up many documentation entries in config.h
6.  With the addition of STATS_P_NOTICE, we now disable STATS_NOTICE by
    default, it resolves a major privacy issue.
7.  Some defines got flipped from previous versions, fixed
8.  Fixed LINKS in SERVERHIDE mode to show everything connected to the
    server you are connected to, as opposed to showing it connected to the
    network description.  We do NOT want to break clients too much!
9.  STATS v should be oper only, especially in SERVERHIDE
10. STATS q should give a correct error message
11. make clean in tools/ needs to remove encspeed
12. Spell checked all the docs
13. Synced up mkpasswd with my latest version (MD5 support, cleanly compiles
    on Solaris)
14. Backported the updated CIDR.txt, Riedel's operguide, and ejb's manpage
15. Updated certain values in config.h as per ievil's recommendations
16. Install the manpage into the DPATH directory, read with 'man -M . ircd'
17. Added a Y: line reference guide
18. Misc doc cleanup all around

--- a/doc/example.conf
+++ b/doc/example.conf
@@ -1,4 +1,4 @@
-#   $Id: example.conf,v 1.25 2000/12/01 06:28:43 lusky Exp $
+#   $Id: example.conf,v 1.26 2001/06/06 05:03:13 db Exp $
 #   IRC - Internet Relay Chat, doc/example.conf
 #   Copyright (C) 1992, Bill Wisner
 #
@@ -145,10 +145,10 @@ I:NOMATCH::*@*ts*::3
 ##
 ## from comstud
 ##
-## 1) There are noticable differences in I: lines now.
+## 1) There are noticeable differences in I: lines now.
 ##   There are 4 special characters that you can stick in front
 ##   of a hostname or ip# that do special things.
-##   These characers are:
+##   These characters are:
 ##   -  This will never put a ~ for a user not running identd
 ##   +  This will force people matching this I: to require identd
 ##   !  This means to only allow 1 connection per ip# in this I:
@@ -162,7 +162,7 @@ I:NOMATCH::*@*ts*::3
 ##      full user@host instead of just host.
 
 ## b) I:x::-*@*.cris.com::class will never show a ~, even though they may
-##     not be running identd.  (This is equivilent to the old way of not
+##     not be running identd.  (This is equivalent to the old way of not
 ##    specifying a @ in the I: line).
 
 ## Additionally since ircd-hybrid-6
@@ -268,7 +268,7 @@ O:vanity@*some.net:-encrypted password-:vanity:nougk:3
 ## Some admins do not like remote tcm kills/klines. If this
 ## tcm oper gets compromised, the best they can do is
 ## rehash/trace/umode +cn , i.e. no global kills or "fun" for the
-## compromised o line. But its still quite usuable for monitoring
+## compromised o line. But its still quite usable for monitoring
 ## clones and nick flooders.
 ##
 #
@@ -398,13 +398,13 @@ P::::6667
 P::209.42.128.252::31337
 #
 # Listen on port 6665 on all available interfaces. Only allow connections from
-# net 128.32. This is checked before existance of other access is available.
+# net 128.32. This is checked before existence of other access is available.
 # 128.32.* == 128.32.0.0 where 0 is a wildcard.
 # Also listen to port 31337 on only 209.42.128.252.  Allow connections from
 # anywhere.
 #
 # D : dump.  Dumps all connect attempts from the matched IP
-# without any procesing.
+# without any processing.
 #
 #     First arg is target IP and CIDR mask, second is a comment.
 #
