* MFH7 (merge from hybrid-7) OpenSSL changes to configure, and the   proper Makefile templates.  OpenSSL should work happily now.

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.10 2001/06/04 18:10:36 jdc Exp $
+dnl $Id: configure.in,v 1.11 2001/06/06 21:35:47 jdc Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -46,57 +46,74 @@ AC_ARG_ENABLE(openssl,
   --disable-openssl            Disable OpenSSL support. ],
 [ cf_enable_openssl=$enableval ],
 [ cf_enable_openssl="auto" ])
-AC_MSG_RESULT($cf_enable_openssl)
 
-dnl If we want OpenSSL, get some information about it first.
-dnl jdc -- This is great: not.  There are too many combinations of
-dnl        possibilities for this argument.  Here ya go:
-dnl          <no argument>         (cf_enable_openssl='auto')
-dnl          --enable-openssl      (cf_enable_openssl='yes')
-dnl          --enable-openssl=DIR  (cf_enable_openssl='DIR')
-dnl          --disable-openssl     (cf_enable_openssl='no')
-if test "X$cf_enable_openssl" != "Xno"; then
-  AC_MSG_CHECKING(for OpenSSL include directory)
+
+if test "X$cf_enable_openssl" != "Xno" ; then
+  cf_openssl_basedir=""
   if test "X$cf_enable_openssl" != "Xauto" &&
-     test "X$cf_enable_openssl" != "Xyes"; then
-        CPPFLAGS="$CPPFLAGS -I${cf_enable_openssl}/include"
-        LIBS="$LIBS -L${cf_enable_openssl}/lib"
-        cf_openssl_incl="${cf_enable_openssl}/include"
+     test "X$cf_enable_openssl" != "Xyes" ; then
+     dnl Support for --enable-openssl=/some/place
+     cf_openssl_basedir="${cf_enable_openssl}"
   else
-    dnl Do the automatic probe here.  Check some directories to see
-    dnl what exists.
-    for incdir in /usr/include/openssl \
-                  /usr/local/openssl/include \
-                  /usr/local/ssl/include ; do
-      if test -f "${incdir}/opensslv.h"; then
-        cf_openssl_incl="$incdir"
+    dnl Do the auto-probe here.  Check some common directory paths.
+    for dirs in /usr/local/ssl \
+                /usr/local/openssl ; do
+      if test -f "${dirs}/include/openssl/opensslv.h" ; then
+        cf_openssl_basedir="${dirs}"
         break
       fi
     done
-    unset incdir
-    dnl If no directories in the list were found to be valid, then we
-    dnl can't support OpenSSL.  Tough titty said the kitty.
-    if test "X$cf_openssl_incl" = "X"; then
-      AC_MSG_WARN(OpenSSL cannot be found.  Please specify it instead.)
-      cf_enable_openssl="no"
+    unset dirs
+  fi
+  dnl Now check cf_openssl_found to see if we found anything.
+  if test "X$cf_openssl_basedir" != "X" ; then
+    if test -f "${cf_openssl_basedir}/include/openssl/opensslv.h" ; then
+      SSL_INCLUDES="-I${cf_openssl_basedir}/include"
+      SSL_LIBS="-L${cf_openssl_basedir}/lib"
     else
-      dnl Otherwise, set CPPFLAGS and move along happily.
-      CPPFLAGS="$CPPFLAGS -I$cf_openssl_incl"
+      dnl OpenSSL wasn't found in the directory specified.  Naughty
+      dnl administrator...
+      cf_openssl_basedir=""
+    fi
+  else
+    dnl Check for stock FreeBSD 4.x and 5.x systems, since their files
+    dnl are in /usr/include and /usr/lib.  In this case, we don't want to
+    dnl change INCLUDES or LIBS, but still want to enable OpenSSL.
+    dnl We can't do this check above, because some people want two versions
+    dnl of OpenSSL installed (stock FreeBSD 4.x/5.x and /usr/local/ssl)
+    dnl and they want /usr/local/ssl to have preference.
+    if test -f "/usr/include/openssl/opensslv.h" ; then
+      cf_openssl_basedir="/usr"
     fi
   fi
-  AC_MSG_RESULT($cf_openssl_incl)
+  dnl If we have a basedir defined, then everything is okay.  Otherwise,
+  dnl we have a problem.
+  if test "X$cf_openssl_basedir" != "X" ; then
+    AC_MSG_RESULT($cf_openssl_basedir)
+    cf_enable_openssl="yes"
+  else
+    AC_MSG_RESULT(not found.  Please check your path.)
+    cf_enable_openssl="no"
+  fi
+  unset cf_openssl_basedir
+else
+  dnl If --disable-openssl was specified
+  AC_MSG_RESULT(disabled)
 fi
+
 
 if test "X$cf_enable_openssl" != "Xno"; then
     dnl Check OpenSSL version (must be 0.9.6 or above!)
     AC_MSG_CHECKING(for OpenSSL 0.9.6 or above)
     AC_TRY_RUN(
     [
-#include "opensslv.h"
-int main() {
-  if (OPENSSL_VERSION_NUMBER < 0x00906000)
-    exit(1);
-  exit(0);
+#include <openssl/opensslv.h>
+int main(void) {
+  if ( (OPENSSL_VERSION_NUMBER & 0x00906000) == 0x00906000)
+  {
+    exit(0);
+  }
+  exit(1);
 }
     ], cf_openssl_version_ok='yes',
        cf_openssl_version_ok='no',
@@ -122,7 +139,7 @@ int main() {
                 cf_openssl_ciphers="${cf_openssl_ciphers}DES/56 ")
         fi
     else
-        AC_MSG_RESULT(OpenSSL version below 0.9.6 - OpenSSL support disabled)
+        AC_MSG_RESULT(no - OpenSSL support disabled)
     fi
 fi
 
@@ -269,6 +286,9 @@ case "$target" in
 *-solaris2*) AC_DEFINE(OS_SOLARIS2) AC_MSG_RESULT(Solaris 2.x) ;;
 *) AC_MSG_RESULT(nothing special required) ;;
 esac
+
+AC_SUBST(SSL_INCLUDES)
+AC_SUBST(SSL_LIBS)
 
 AC_OUTPUT(Makefile src/Makefile tools/Makefile zlib/Makefile)
 
