- fixed OpenSSL support that b0rked in the meantime

--- a/autoconf/configure.in
+++ b/autoconf/configure.in
@@ -1,4 +1,4 @@
-dnl $Id: configure.in,v 1.12 2001/06/06 21:59:19 kreator Exp $
+dnl $Id: configure.in,v 1.13 2001/06/07 17:27:30 kreator Exp $
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(include/class.h)
 
@@ -101,7 +101,10 @@ else
   AC_MSG_RESULT(disabled)
 fi
 
-
+save_CPPFLAGS="$CPPFLAGS"
+CPPFLAGS="$CPPFLAGS $SSL_INCLUDES"
+save_LIBS="$LIBS"
+LIBS="$LIBS $SSL_LIBS"
 if test "X$cf_enable_openssl" != "Xno"; then
     dnl Check OpenSSL version (must be 0.9.6 or above!)
     AC_MSG_CHECKING(for OpenSSL 0.9.6 or above)
@@ -123,6 +126,8 @@ int main(void) {
     if test "X$cf_openssl_version_ok" = "Xyes"; then
         AC_MSG_RESULT(ok)
         dnl Do all the HAVE_LIBCRYPTO magic -- and check for ciphers
+        save_CPPFLAGS="$CPPFLAGS"
+        CPPFLAGS="$CPPFLAGS $SSL_LIBS"
         AC_CHECK_LIB(crypto, RSA_free)
         if test "X$ac_cv_lib_crypto_RSA_free" = "Xyes"; then
             cf_openssl_ciphers=''
@@ -139,10 +144,14 @@ int main(void) {
             AC_CHECK_FUNCS(EVP_des_cfb,
                 cf_openssl_ciphers="${cf_openssl_ciphers}DES/56 ")
         fi
+        CPPFLAGS="$save_CPPFLAGS"
+        SSL_LIBS="$SSL_LIBS -lcrypto"
     else
         AC_MSG_RESULT(no - OpenSSL support disabled)
     fi
 fi
+CPPFLAGS="$save_CPPFLAGS"
+LIBS="$save_LIBS"
 
 dnl taken from ircd's Config script
 AC_MSG_CHECKING(for non-blocking socket implementation)
