--- a/tools/Makefile.in
+++ b/tools/Makefile.in
@@ -1,4 +1,4 @@
-# $Id: Makefile.in,v 1.12 2001/06/06 21:35:49 jdc Exp $
+# $Id: Makefile.in,v 1.13 2001/06/07 18:51:22 kreator Exp $
 
 CC=@CC@
 RM=@RM@
@@ -38,7 +38,7 @@ encspeed: $(encspeed_OBJECTS)
 	$(CC) $(LDFLAGS) -o encspeed $(encspeed_OBJECTS) $(IRCDLIBS)
 
 clean:
-	$(RM) -f $(all_OBJECTS) fixklines viconf chkconf mkpasswd *~ core *.exe
+	$(RM) -f $(all_OBJECTS) fixklines viconf chkconf encspeed mkpasswd *~ core *.exe
 
 distclean: clean
 	$(RM) -f Makefile
